[package]
name = "animation_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
fastrand = "1.8"
glam = "0.25.0"
lazy_static = "1.4.0"
speedy2d = { version = "2.1", path = "../Speedy2D", default-features = false, features = ["windowing-wayland", "shapes",  "windowing", "image-loading", "image-png"] }
strum = { version = "0.24", featuers = ["derive"]}
strum_macros = "0.24"

[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1
